# pickup-tuner

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/pickup-tuner-design/: .thumbnail  HANDOFF.md  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
.claude/skills/pickup-tuner-design/assets/: README.md
.claude/skills/pickup-tuner-design/chats/: chat1.md
.claude/skills/pickup-tuner-design/components/feedback/: Tooltip.d.ts  Tooltip.jsx  Tooltip.prompt.md  feedback.card.html
.claude/skills/pickup-tuner-design/components/forms/: Button.d.ts  Button.jsx  (+23 more)
.claude/skills/pickup-tuner-design/guidelines/: brand-glyphs.card.html  brand-wordmark.card.html  colors-accents.card.html  colors-heatmap.card.html  colors-surfaces.card.html  colors-text.card.html  spacing-material.card.html  spacing-radii.card.html  spacing-scale.card.html  type-display.card.html  type-label.card.html  type-mono.card.html  type-ui.card.html
.claude/skills/pickup-tuner-design/tokens/: colors.css  fonts.css  spacing.css  typography.css
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-12-pickup-tuner.md
docs/superpowers/specs/: 2026-06-12-pickup-tuner-design.md  2026-06-14-release-strategy-design.md
examples/: list_devices.rs  live_meter.rs
scripts/: release.ps1
src/: lib.rs  main.rs
src/audio/: engine.rs  mod.rs  process.rs
src/dsp/: capture.rs  levels.rs  mod.rs  pitch.rs
src/model/: grid.rs  mod.rs  settings.rs
src/ui/: app.rs  config.rs  grid.rs  meter.rs  mod.rs  theme.rs  tuner.rs  widgets.rs
(+26 files in other folders)
